# binbased-tracing

./: .gitignore  Cargo.toml  README.md  trace.toml  trace.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
binbased-tracing/: Cargo.toml  build.rs
binbased-tracing/src/: config.rs  dwarf.rs  elf.rs  event.rs  event_buffer.rs  lib.rs  main.rs  maps.rs  monitor.rs  proc.rs  ptrace.rs  trace_collector.rs
binbased-tracing/src/instruction/: blob.rs  mod.rs  patch.rs  trampoline.rs
binbased-tracing/src/instrument/: mod.rs  plan.rs  trampoline.rs
demo/: db.go  go.mod  handler.go  index.html  main.go
src/: conf.rs  config.rs  dwarf.rs  elf.rs  error.rs  event.rs  event_buffer.rs  instruction.rs  instrument.rs  main.rs  maps.rs  monitor.rs  pipe.rs  proc.rs  ptrace.rs  shm.rs  symbol_analyzer.rs  trace_collector.rs
src/instruction/: encode.rs  mod.rs  patch.rs  trampoline.rs
trampoline-blob/: Cargo.toml  link.ld
trampoline-blob-common/: Cargo.toml
trampoline-blob-common/src/: lib.rs
trampoline-blob/.cargo/: config.toml
trampoline-blob/src/: main.rs
